--- a/Optima_crm/core/templates/core/base.html
+++ b/Optima_crm/core/templates/core/base.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="py-6 px-6 flex justify-between bg-teal-900">
-        <a href="/" class="text-white">CRM</a>
+        <a href="/" class="text-white">Optima CRM</a>
 
         <div>
             <a href="/" class="py-4 px-6 bg-teal-500 rounded-xl text-white">Log in</a>
