Edited the Document

--- a/Optima_crm/core/templates/core/index.html
+++ b/Optima_crm/core/templates/core/index.html
@@ -1,9 +1,7 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Optima CRM{% endblock %}
+{% block title %}Teal CRM{% endblock %}
 
 {% block content %}
-
-The front page
-
+THe front page
 {% endblock %}
