--- a/Optima_crm/core/templates/core/base.html
+++ b/Optima_crm/core/templates/core/base.html
@@ -1,30 +1,30 @@
 <!doctype html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <link rel="stylesheet" href="{% static 'main.min.css' %}">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>{% block title %}{% endblock %}</title>
-</head>
+        <title>{% block title %}{% endblock %}</title>
+    </head>
+    
+    <body>
+        {% include 'core/partials/nav.html' %}
 
-<body>
-    <nav class="py-6 px-6 flex justify-between bg-teal-900">
-        <a href="/" class="text-white">Optima CRM</a>
+        {% if messages %}
+            <div class="py-6 px-6">
+                {% for message in messages %}
+                    <div class="py-4 px-4 bg-teal-300 text-white rounded-xl">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
 
-        <div>
-            <a href="/" class="py-4 px-6 bg-teal-500 rounded-xl text-white">Log in</a>
-            <a href="/" class="py-4 px-6 bg-teal-300 rounded-xl text-white">Sign up</a>
-        </div>
-    </nav>
+        {% block content %}
+        {% endblock %}
 
-    {% block content %}
-    {% endblock %}
-
-
-    <footer class="py-8 text-center bg-gray-200">
-        <p class="text-xs text-gray-700">Copyright (c) 2024 - Optima CRM</p>
-    </footer>
-</body>
-
+        {% include 'core/partials/footer.html' %}
+    </body>
 </html>
